portifolio/src/app/globals.css
/* Backgrounds para troca dinâmica */
.bg-header {
  background: radial-gradient(circle at left, #090A09 50%, #0D0C0D, #0D0C0D, #0D0C0D 80%, #0D0C0D 10%) !important;
}
.bg-section {
  background: radial-gradient(circle at left, #090A09 50%, #0D0C0D, #0D0C0D, #0D0C0D 80%, #0D0C0D 10%) !important;
}
/* Esconde completamente a barra de rolagem (scrollbar) */


html {
  scrollbar-width: none !important;
  scrollbar-color: #0D0C0D #0D0C0D !important;
}

/* Flecha animada do scroll */
.arrow-bounce {
  animation: arrowBounce 1.2s infinite;
}

@keyframes arrowBounce {
  0%, 100% { transform: translateY(0); }
  50% { transform: translateY(12px); }
}

.arrow-circle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 3rem;
  height: 3rem;
  border-radius: 9999px;
  background: transparent;
  transition: all 0.3s;
}
.arrow-group:hover .arrow-circle {
  background: #fff;
  transform: scale(1.15);
}
.arrow-icon {
  color: #fff;
  font-size: 2.5rem;
  transition: color 0.3s;
}
.arrow-group:hover .arrow-icon {
  color: #111;
}
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

/* @theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
} */

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}


@font-face {
  font-family: "Poppins";
  src: url('/Poppins/Poppins-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Poppins";
  src: url('/Poppins/Poppins-Bold.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Poppins";
  src: url('/Poppins/Poppins-Italic.ttf') format('truetype');
  font-weight: 400;
  font-style: italic;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
}

